# rails-technical

./: README.md
backend/: pyproject.toml
backend/backend/: app.py  main.py  models.py  schemas.py
backend/backend/spec/: create_spec  schema-report.json  schema-reportrow.json  spec.bundle  spec.yaml
frontend/: .eslintrc.json
